--- a/languages/en.json
+++ b/languages/en.json
@@ -15,8 +15,9 @@
       "chart3": "New User",
       "views": "Total Views",
       "stat1": "Recent PSA Value",
-      "stat2": "Probability of Survival",
+      "stat2": "Stage",
       "stat3": "Gleason Score",
+      "stat4": "Probability NCRP",
       "dashboard": "Dashboard",
       "typography": "Typography",
       "grid": "Grid",
