spelling and removed link from profile pic let me know if you want it back

--- a/languages/en.json
+++ b/languages/en.json
@@ -17,7 +17,7 @@
       "stat1": "Recent PSA Value",
       "stat2": "Stage",
       "stat3": "Gleason Score",
-      "stat4": "Probability NCRP",
+      "stat4": "Probability NPCR",
       "dashboard": "Dashboard",
       "typography": "Typography",
       "grid": "Grid",
